// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should be block 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be disabled 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  opacity: 0.7;
  pointer-events: none;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be fixed size 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  height: 32px;
  width: 32px;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be loading 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
  pointer-events: none;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should be under the button container 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should have addon 1`] = `
<DocumentFragment>
  .c0 .c4 {
  font-size: .875rem;
  padding: .45rem .9rem;
  padding-left: 0.45rem;
}

.c0 .c4 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  border-right: 0;
  border-bottom-left-radius: .125rem;
  border-top-left-radius: .125rem;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color;
  transition-property: background,border,color;
  background: #0553AC;
  border-color: #0553AC;
  color: #fff;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c4 {
  border-radius: .125rem;
}

.c1 .c4 {
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1:active {
  outline: 0;
}

.c1 .c4 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c4 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c4 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:hover .c2 {
  background: #054D9F;
  border-color: #054D9F;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2  c3"
      shape="rectangle"
    >
      Addon
    </div>
    <span
      class="c4 c5"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should have separated addon 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component as link 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  border-color: transparent;
  color: #0665d0;
  fill: #0665d0;
}

.c1:hover .c2 {
  color: #054D9F;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component outline 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  border-color: #0665d0;
  color: #0665d0;
}

.c1:hover .c2 {
  background: #0665d0;
  color: #fff;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component outline with soft colors 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  border-color: #cde0f5;
  color: #cde0f5;
}

.c1:hover .c2 {
  background: #cde0f5;
  color: #033c7c;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #cde0f5;
  border-color: #cde0f5;
  color: #033c7c;
}

.c1:hover .c2 {
  background: #b9d3f1;
  border-color: #b9d3f1;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should resize component responsively 1`] = `
<DocumentFragment>
  .c0 .c2 {
  font-size: .75rem;
  padding: .28rem .8rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.2rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  width: 100%;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

@media (min-width:768px) {
  .c0 .c2 {
    font-size: .875rem;
    padding: .45rem .9rem;
  }

  .c0 .c2 > :not(:last-child) {
    margin-right: 0.225rem;
  }
}

@media (min-width:992px) {
  .c0 .c2 {
    font-size: 1rem;
    padding: .5rem 1rem;
  }

  .c0 .c2 > :not(:last-child) {
    margin-right: 0.25rem;
  }
}

<button
    class="c0 c1"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;
